force-app/main/default/objects/Account/fields/Buy_From__c.field-meta.xml
<CustomField>
    <fullName>Buy_From__c</fullName>
    <label>Buy From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>