force-app/main/default/objects/Account/fields/Current_time__c.field-meta.xml
<CustomField>
    <fullName>Current_time__c</fullName>
    <label>Current time</label>
    <type>Time</type>
</CustomField>