force-app/main/default/objects/Account/fields/Date_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Purchase__c</fullName>
    <label>Date of Purchase</label>
    <type>Date</type>
</CustomField>