force-app/main/default/objects/Account/fields/Delieverd_to__c.field-meta.xml
<CustomField>
    <fullName>Delieverd_to__c</fullName>
    <label>Delieverd to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>