force-app/main/default/objects/Account/fields/distributor__c.field-meta.xml
<CustomField>
    <fullName>distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer</relationshipLabel>
    <relationshipName>Distributors</relationshipName>
    <type>Lookup</type>
</CustomField>