force-app/main/default/objects/Account/fields/Entrance_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Entrance_Instruction__c</fullName>
    <description>This is used to store the Unit/Apartment Entry Codes</description>
    <inlineHelpText>Entry Code for Unit/Appartments</inlineHelpText>
    <label>Entrance Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>