force-app/main/default/objects/Account/fields/No_of_Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>No_of_Contact_Count__c</fullName>
    <label>No. of Contact Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>