force-app/main/default/objects/Account/fields/number_of_contacts__c.field-meta.xml
<CustomField>
    <fullName>number_of_contacts__c</fullName>
    <label>number of contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>