force-app/main/default/objects/Account/fields/Receipt_Code__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Code__c</fullName>
    <displayFormat>RC-{0000}</displayFormat>
    <label>Receipt Code</label>
    <type>AutoNumber</type>
</CustomField>