force-app/main/default/objects/Account/fields/Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Status__c</fullName>
    <label>Sales Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>