force-app/main/default/objects/Account/fields/Trash_Disposal__c.field-meta.xml
<CustomField>
    <fullName>Trash_Disposal__c</fullName>
    <label>Trash Disposal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>