force-app/main/default/objects/Account/fields/valid__c.field-meta.xml
<CustomField>
    <fullName>valid__c</fullName>
    <label>valid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>