force-app/main/default/objects/Account/fields/Visit_Location__c.field-meta.xml
<CustomField>
    <fullName>Visit_Location__c</fullName>
    <label>Visit Location</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>